data/derived/comb/progs/unify/prog7198.ml.out
Characters 135-139:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * int
       but an expression was expected of type int
